# secure-log

./: .actrc  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/secure-log/: Cargo.toml
crates/secure-log-component/: Cargo.toml
crates/secure-log-component/src/: lib.rs
crates/secure-log-component/wit/: world.wit
crates/secure-log-component/wit-deps/tegmentum-log/: logger.wit
crates/secure-log-keystore-software/: Cargo.toml
crates/secure-log-keystore-software/src/: lib.rs
crates/secure-log-keystore-software/wit/: world.wit
crates/secure-log-rpc/: Cargo.toml
crates/secure-log-rpc-server/: Cargo.toml
crates/secure-log-rpc-server/src/: dispatch.rs  lib.rs  main.rs
crates/secure-log-rpc-server/wit/: world.wit
crates/secure-log-rpc/src/: lib.rs
crates/secure-log-signer-keystore/: Cargo.toml
crates/secure-log-signer-keystore/src/: lib.rs
crates/secure-log-signer-keystore/tests/: checkpoint_signing.rs
crates/secure-log-signer-keystore/wit/: world.wit
crates/secure-log-sqlite/: Cargo.toml
crates/secure-log-sqlite/src/: lib.rs
crates/secure-log-sqlite/tests/: native_integration.rs
crates/secure-log-store-file/: Cargo.toml
crates/secure-log-store-file/src/: lib.rs
crates/secure-log-store-file/wit/: world.wit
crates/secure-log-store-remote/: Cargo.toml
crates/secure-log-store-remote/src/: lib.rs
crates/secure-log-store-remote/wit/: world.wit
crates/secure-log-store-sqlite/: Cargo.toml
crates/secure-log-store-sqlite/src/: lib.rs
crates/secure-log-store-sqlite/wit/: world.wit
crates/secure-log-transport-http/: Cargo.toml
crates/secure-log-transport-http/src/: lib.rs
crates/secure-log-transport-http/wit/: world.wit
crates/secure-log/src/: checkpoint.rs  crypto.rs  encoder.rs  hash.rs  lib.rs  merkle.rs  model.rs  native.rs  signer.rs  store.rs  wasm_encoder.rs  witness.rs
scripts/: build-components.sh  vendor-transport-wit.sh
verify/: Cargo.toml
verify/src/: main.rs
verify/wit/: world.wit
wit/: log.wit  store.wit
