[package]
name = "secure-log-verify"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone host harness: instantiates a composed secure-log
# component under wasmtime and exercises the exported secure-log:log
# interface end-to-end. Excluded from the component workspace.
#
# For the remote backend it also embeds the reference JSON-RPC server
# (secure-log-rpc-server) and provides wasi:http, so the composed
# secure-log-remote.wasm can be driven without any external process.

[dependencies]
wasmtime = "44"
wasmtime-wasi = "44"
wasmtime-wasi-http = "44"
anyhow = "1"
secure-log-rpc-server = { path = "../crates/secure-log-rpc-server" }
