[package]
name = "secure-log-verify"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone host harness: instantiates a composed secure-log
# component under wasmtime and exercises the exported secure-log:log
# interface end-to-end. Excluded from the component workspace.
#
# For the remote backend it runs the composed secure-log-rpc-server.wasm
# endpoint under `wasmtime serve` (subprocess) and provides wasi:http, so
# the remote client stack can be driven without any external setup.

[dependencies]
wasmtime = "45"
wasmtime-wasi = "45"
wasmtime-wasi-http = "45"
anyhow = "1"
