[package]
name = "secure-log-component"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure-log core as a WASI Preview 2 component: imports secure-log:store, exports secure-log:log + encoder."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
secure-log = { workspace = true }
anyhow = "1"
# In-graph checkpoint verification dispatches on the key algorithm.
# Verify-only here (signing happens in the keystore), so no RNG needed.
ed25519-dalek = "2"
p256 = "0.13"
rsa = "0.9"
sha2 = { workspace = true }

[package.metadata.component]
package = "secure-log:core-signing"

[package.metadata.component.target]
path = "wit"
world = "secure-log-core-signing"

# secure-log:log (the shared interfaces) + keys:keystore (the signer
# import), each a self-contained dir. cargo-component resolves target
# deps only from this table, parsing each in isolation.
[package.metadata.component.target.dependencies]
"secure-log:log" = { path = "../../wit" }
"keys:keystore" = { path = "wit-deps/keys-keystore" }
# Vendored from ~/git/log-wit @ v0.1.0. Re-vendor by copying
# ~/git/log-wit/wit/logger.wit into wit-deps/tegmentum-log/ and
# prepending the `package tegmentum:log@0.1.0;` declaration.
"tegmentum:log" = { path = "wit-deps/tegmentum-log" }
