[package]
name = "secure-log-rpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote-store endpoint as a wasi:http guest component: dispatches JSON-RPC store calls to an imported secure-log:log/store. Compose with a store provider and run with `wasmtime serve`."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
secure-log-rpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
