[package]
name = "secure-log-store-file"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "secure-log:store provider backed by an append-only file via WASI filesystem (WASI Preview 2)."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.component]
package = "secure-log:store-file"

[package.metadata.component.target]
path = "wit"
world = "store-file"

[package.metadata.component.target.dependencies]
"secure-log:log" = { path = "../../wit" }
